fix: AJuste swagger y fmt
