# models/solicitud_detalle.go
@@ -1,15 +1,15 @@
 package models
 
 type SolicitudDetalles struct {
-	Solicitud  			*Solicitud
-	EstadoSolicitud 	*EstadoSolicitud
-	Formulario 			interface{}
-	Documentos 			[]DocumentoDetalle
+	Solicitud       *Solicitud
+	EstadoSolicitud *EstadoSolicitud
+	Formulario      interface{}
+	Documentos      []DocumentoDetalle
 }
 
-type DocumentoDetalle struct{
-	Nombre	string
-	Enlace	string
-	Tipo	*TipoDocumentoSolicitud
-	Estado	*EstadoDocumento
+type DocumentoDetalle struct {
+	Nombre string
+	Enlace string
+	Tipo   *TipoDocumentoSolicitud
+	Estado *EstadoDocumento
 }
