# models/tipo_solicitud.go
@@ -1,7 +1,7 @@
 package models
 
 type TipoSolicitud struct {
-	Id   				int 	`json:"Id"`
-	Nombre 				string 	`json:"Nombre"`
-	CodigoAbreviacion	string 	`json:"CodigoAbreviacion"`
+	Id                int    `json:"Id"`
+	Nombre            string `json:"Nombre"`
+	CodigoAbreviacion string `json:"CodigoAbreviacion"`
 }
